updated media queries, css

--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,8 @@
         <div class="content">
           <p>A perfect place for your dog to stay.</p>
           <div class="btn reg">
-            <button class="cta">Register Today</button>
-            <button class="cta">Book a Tour!</button>
+            <button class="cta rg">Register Today</button>
+            <button class="cta rg">Book a Tour!</button>
           </div>
         </div>
       </div>
