--- a/contact.html
+++ b/contact.html
@@ -22,16 +22,19 @@
       </nav>
     </header>
     <main class="background">
-      <div class="container cont">
-        <div class="content">
-          <p>A perfect place for your dog to stay.</p>
-          <div class="btn reg">
-            <button class="cta rg">Register Today</button>
-            <button class="cta rg">Book a Tour!</button>
+      <div class="container hero-image">
+        <div class="hero-content">
+          <div class="hero-content-inner">
+            <h1>A perfect place for your dog to stay.</h1>
+            <div class="tour">
+              <button class="cta rg">Register Today</button>
+              <button class="cta rg">Book a Tour!</button>
+            </div>
           </div>
         </div>
       </div>
     </main>
+
     <section>
       <div class="container contact">
         <div class="social-media logo-end">
@@ -42,7 +45,7 @@
         </div>
         <div class="social-media">
           <p>Sameer Gokhale</p>
-          <p>Phone: 095799 48877</p>
+          <p>Phone: 95799 48877</p>
           <p>
             Address: 3, Mundhwa Road, Deccan Paper Mill Rd, near Freekick
             Football Arena, Mundhwa, Pune, Maharashtra 411036
