--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <section class="main">
       <div class="container last">
         <p>Book your dog's stay today</p>
-        <button class="cta">BOOK</button>
+        <button class="cta">Book</button>
       </div>
     </section>
     <footer class="light">
