updated gallery items

--- a/gallery.html
+++ b/gallery.html
@@ -41,8 +41,18 @@
         <div class="g-item">
           <img src="./Images/g6.jpg" class="gimg" alt="" />
         </div>
+        <div class="g-item">
+          <img src="./Images/g7.jpg" class="gimg" alt="" />
+        </div>
+        <div class="g-item">
+          <img src="./Images/g8.jpg" class="gimg" alt="" />
+        </div>
+        <div class="g-item">
+          <img src="./Images/g9.jpg" class="gimg" alt="" />
+        </div>
       </div>
     </main>
+
     <footer class="light">
       <div class="container">
         <p>Copyright &copy; Unleash - The Dog Town 2024</p>
