--- a/index.html
+++ b/index.html
@@ -30,42 +30,50 @@
           </h1>
           <p>A home away from home for your beloved canine.</p>
         </div>
-        <img src="./Images/Screenshot_20230809_202650_Gallery.png" alt="" />
+        <img src="./Images/intro.png" alt="" />
       </div>
     </section>
     <section class="light">
       <div class="container reason">
         <p>Why choose Unleash - The Dog Town</p>
-        <div class="sticker">
-          <figure class="fig">
-            <img src="./Images/1.png" alt="" />
-            <figcaption>
-              Experienced Staff: Our team of dedicated pet care professionals
-              has extensive experience in handling dogs of all breeds and sizes.
-            </figcaption>
-          </figure>
-          <figure class="fig">
-            <img src="./Images/2.png" alt="" />
-            <figcaption>
-              24/7 Supervision: We offer round-the-clock supervision to ensure
-              your pet's safety and well-being at all times.
-            </figcaption>
-          </figure>
-          <figure class="fig">
-            <img src="./Images/3.png" alt="" />
-            <figcaption>
-              Spacious Play Areas: Large, secure outdoor and indoor play areas
-              allow your dog to run, play, and socialize.
-            </figcaption>
-          </figure>
-          <figure class="fig">
-            <img src="./Images/4.png" alt="" />
-            <figcaption>
-              Regular Updates: Stay connected with daily photos and updates on
-              your pet’s activities and well-being.
-            </figcaption>
-          </figure>
-        </div>
+        <div class="town">
+          <div class="box">
+            <figure>
+              <img src="./Images/1.png" alt="" />
+              <figcaption>
+                Experienced Staff: Our team of pet care professionals
+              has experience in handling dogs of all breeds and sizes.
+              </figcaption>
+            </figure>
+          </div>
+          <div class="box">
+            <figure>
+              <img src="./Images/2.png" alt="" />
+              <figcaption>
+                24/7 Supervision: We offer round-the-clock supervision to ensure
+              your pet's safety & well-being at all times.
+              </figcaption>
+            </figure>
+          </div>
+          <div class="box">
+            <figure>
+              <img src="./Images/3.png" alt="" />
+              <figcaption>
+                Spacious Play Areas: Large, secure outdoor and indoor play areas
+                allow your dog to run, play, and socialize.
+              </figcaption>
+            </figure>
+          </div>
+          <div class="box">
+            <figure>
+              <img src="./Images/4.png" alt="" />
+              <figcaption>
+                Regular Updates: Stay connected with daily photos, videos and updates on
+                your pet’s activities and well-being.
+              </figcaption>
+            </figure>
+          </div>
+    
       </div>
     </section>
     <article>
@@ -99,72 +107,64 @@
         </div>
       </div>
     </article>
+  
     <section class="light">
-      <div class="container reviews">
-        <h2>Reviews</h2>
-        <div class="rev">
-          <div class="star">
-            <p>
-              Sam and the tribe at Unleash are the most gentle and caring family
-              for my dog Charly when I have to leave her there. She's
-              perpetually happy on being taken there, as seen from her
-              excitement once the main gate is opened. Sam, Bappa, Lily, Phoebe
-              are her best friends and I feel very comfortable when am traveling
-              to know that Charly is surrounded by these kind souls. Sam and
-              Bappa send regular updates during the entire day and it's easy to
-              see the dogs having fun. I also take Sam's counsel anything
-              related to Charly and he's very patient with me. He personally
-              makes all meals for all the dogs there and he is very committed to
-              the well being of each dog. Thank you Sam, Bappa and everyone at
-              Unleash
-            </p>
-            <p>- <em>Siddharth Pandit</em></p>
-          </div>
-          <div class="star">
-            <p>
-              Hiro has been boarding with Sam since 2017. There's no one we
-              trust more than him and his team when it comes to taking care of
-              our not-so-little pupper. Hiro has made lots of friends at Unleash
-              and always jumps up with excitement whenever we go there. We are
-              so glad to have found Sam. He and his team make extra efforts to
-              take good care of Hiro in our absence. We recieve photos updates
-              and videos of him regularly everyday. Sam is super-understanding
-              and helped us out with Hiro on multiple occasions and during
-              family emergencies. We highly recommend Unleash as a home away
-              from home for your dog.
-            </p>
-            <p>- <em>Faraz Farooque</em></p>
-          </div>
-          <div class="star">
-            <p>
-              Unleash is truly an amazing place. My pet Emma was made to feel at
-              home. Sam keeps a check on all the little things which helps put
-              pet parents at ease. We were concerned about Emma due to a medical
-              condition but Sam kept a check on that and kept in regular contact
-              so that we were aware and relaxed. For Emma it is a home away from
-              home.
-            </p>
-            <p>- <em>Clifford Fernandes</em></p>
-          </div>
-          <div class="star">
-            <p>
-              Hi. we left our 7-month old "Rocky" (beagle) at Unleash for two
-              weeks. Rocky was keeps so busy with his paw-friends and
-              Unleash-staff over there, that whenever my sister visited him, she
-              was certain that he was as happy or happier there, as compared to
-              home. Daily pics/video updates were sent by Sam personally which
-              made us very comfortable. Indeed, after coming back home, Rocky is
-              looking around for the friendly faces @ Unleash! He misses it!
-            </p>
-            <p>- <em>Kishore Keswani </em></p>
-          </div>
-        </div>
+      <div class="container  rev">
+        <h1>Customer Reviews</h1>
+      <div class="review-card">
+        <p class="review-text">"Sam and the tribe at Unleash are the most gentle and caring family
+          for my dog Charly when I have to leave her there. She's
+          perpetually happy on being taken there, as seen from her
+          excitement once the main gate is opened. Sam, Bappa, Lily, Phoebe
+          are her best friends and I feel very comfortable when am traveling
+          to know that Charly is surrounded by these kind souls. Sam and
+          Bappa send regular updates during the entire day and it's easy to
+          see the dogs having fun. I also take Sam's counsel anything
+          related to Charly and he's very patient with me. He personally
+          makes all meals for all the dogs there and he is very committed to
+          the well being of each dog. Thank you Sam, Bappa and everyone at
+          Unleash"</p>
+        <p class="review-author">- <em>Siddharth Pandit</em></p>
+      </div>
+      <div class="review-card">
+      <p class="review-text">"Hiro has been boarding with Sam since 2017. There's no one we
+        trust more than him and his team when it comes to taking care of
+        our not-so-little pupper. Hiro has made lots of friends at Unleash
+        and always jumps up with excitement whenever we go there. We are
+        so glad to have found Sam. He and his team make extra efforts to
+        take good care of Hiro in our absence. We recieve photos updates
+        and videos of him regularly everyday. Sam is super-understanding
+        and helped us out with Hiro on multiple occasions and during
+        family emergencies. We highly recommend Unleash as a home away
+        from home for your dog."</p>
+      <p class="review-author">- <em>Faraz Farooque</em></p>
+     </div>
+     <div class="review-card">
+      <p class="review-text">"Unleash is truly an amazing place. My pet Emma was made to feel at
+      home. Sam keeps a check on all the little things which helps put
+      pet parents at ease. We were concerned about Emma due to a medical
+      condition but Sam kept a check on that and kept in regular contact
+      so that we were aware and relaxed. For Emma it is a home away from
+      home"</p>
+      <p class="review-author">- <em>Clifford Fernandes</em></p>
+     </div>
+     <div class="review-card">
+     <p class="review-text">"Hi. We left our 7-month old "Rocky" (beagle) at Unleash for two
+     weeks. Rocky was keeps so busy with his paw-friends and
+     Unleash-staff over there, that whenever my sister visited him, she
+     was certain that he was as happy or happier there, as compared to
+     home. Daily pics/video updates were sent by Sam personally which
+     made us very comfortable. Indeed, after coming back home, Rocky is
+     looking around for the friendly faces @ Unleash! He misses it!"</p>
+     <p class="review-author">- <em>Kishore Keswani</em></p>
+     </div>
+     
       </div>
     </section>
     <section class="main">
       <div class="container last">
         <p>Book your dog's stay today</p>
-        <button class="cta">Book</button>
+        <button class="cta">BOOK</button>
       </div>
     </section>
     <footer class="light">
