--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
       </nav>
     </header>
     <main class="background">
-      <div class="container hero-image">
+      <div class="container">
         <div class="hero-content">
           <div class="hero-content-inner">
             <h1>A perfect place for your dog to stay.</h1>
