changes in index and style

--- a/index.html
+++ b/index.html
@@ -107,60 +107,45 @@
         </div>
       </div>
     </article>
-  
     <section class="light">
-      <div class="container  rev">
-        <h1>Customer Reviews</h1>
-      <div class="review-card">
-        <p class="review-text">"Sam and the tribe at Unleash are the most gentle and caring family
-          for my dog Charly when I have to leave her there. She's
-          perpetually happy on being taken there, as seen from her
-          excitement once the main gate is opened. Sam, Bappa, Lily, Phoebe
-          are her best friends and I feel very comfortable when am traveling
-          to know that Charly is surrounded by these kind souls. Sam and
-          Bappa send regular updates during the entire day and it's easy to
-          see the dogs having fun. I also take Sam's counsel anything
-          related to Charly and he's very patient with me. He personally
-          makes all meals for all the dogs there and he is very committed to
-          the well being of each dog. Thank you Sam, Bappa and everyone at
-          Unleash"</p>
-        <p class="review-author">- <em>Siddharth Pandit</em></p>
-      </div>
-      <div class="review-card">
-      <p class="review-text">"Hiro has been boarding with Sam since 2017. There's no one we
-        trust more than him and his team when it comes to taking care of
-        our not-so-little pupper. Hiro has made lots of friends at Unleash
-        and always jumps up with excitement whenever we go there. We are
-        so glad to have found Sam. He and his team make extra efforts to
-        take good care of Hiro in our absence. We recieve photos updates
-        and videos of him regularly everyday. Sam is super-understanding
-        and helped us out with Hiro on multiple occasions and during
-        family emergencies. We highly recommend Unleash as a home away
-        from home for your dog."</p>
-      <p class="review-author">- <em>Faraz Farooque</em></p>
-     </div>
-     <div class="review-card">
-      <p class="review-text">"Unleash is truly an amazing place. My pet Emma was made to feel at
-      home. Sam keeps a check on all the little things which helps put
-      pet parents at ease. We were concerned about Emma due to a medical
-      condition but Sam kept a check on that and kept in regular contact
-      so that we were aware and relaxed. For Emma it is a home away from
-      home"</p>
-      <p class="review-author">- <em>Clifford Fernandes</em></p>
-     </div>
-     <div class="review-card">
-     <p class="review-text">"Hi. We left our 7-month old "Rocky" (beagle) at Unleash for two
-     weeks. Rocky was keeps so busy with his paw-friends and
-     Unleash-staff over there, that whenever my sister visited him, she
-     was certain that he was as happy or happier there, as compared to
-     home. Daily pics/video updates were sent by Sam personally which
-     made us very comfortable. Indeed, after coming back home, Rocky is
-     looking around for the friendly faces @ Unleash! He misses it!"</p>
-     <p class="review-author">- <em>Kishore Keswani</em></p>
-     </div>
-     
+      <div class="container rev">
+        <div class="container__left">
+          <h1>Read what our clients love about us</h1>
+        </div>
+        <div class="container__right">
+          <div class="card">
+            <div class="card__content">
+              <span><i class='bx bxs-quote-alt-left'></i></span>
+              <div class="card__details">
+                <p>Awesome place. This was the first time we were leaving our fur baby. But Sam made sure this won't be our last time. He and his staff did a great work taking care of my pet. We were so relaxed and assured. I do recommend Unleash to anyone who wants a place and person so trustworthy that you can leave ur fur babies with them.</p>
+                <h4>- Shradha L</h4>
+              </div>
+            </div>
+          </div>
+          
+          <div class="card">
+            <div class="card__content">
+              <span><i class='bx bxs-quote-alt-left'></i></span>
+              <div class="card__details">
+                <p>More than the facility which in itself is very very clean and spacious, it’s Mr Sameer Gokhale who impresses you with his dedication and care for your furry baby. He updates you regularly and is very concerned about whether our pet is eating well and is happy. Super impressive, keep it going!!!</p>
+                <h4>- Mamta Singh</h4>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card__content">
+              <span><i class='bx bxs-quote-alt-left'></i></span>
+              <div class="card__details">
+                <p>Thank you Sameer and team for taking proper care of Coco inspite of his growling and agressive behaviour..Thanks a lot Sameer for your guidance on dog training and behaviour, will definitely work on it. Unleash is the best place in town where your pet is in the most safe and experienced hands.</p>
+                <h4>- Deepali Jamdade</h4>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
+  
+   
     <section class="main">
       <div class="container last">
         <p>Book your dog's stay today</p>
