--- a/gallery.html
+++ b/gallery.html
@@ -23,33 +23,15 @@
     </header>
     <main class="gall">
       <div class="gallery container">
-        <div class="g-item">
-          <img src="./Images/g1.jpg" class="gimg" alt="" />
-        </div>
-        <div class="g-item">
-          <img src="./Images/g2.jpg" class="gimg" alt="" />
-        </div>
-        <div class="g-item">
-          <img src="./Images/g3.jpg" class="gimg" alt="" />
-        </div>
-        <div class="g-item">
-          <img src="./Images/g4.jpg" class="gimg" alt="" />
-        </div>
-        <div class="g-item">
-          <img src="./Images/g5.jpg" class="gimg" alt="" />
-        </div>
-        <div class="g-item">
-          <img src="./Images/g6.jpg" class="gimg" alt="" />
-        </div>
-        <div class="g-item">
-          <img src="./Images/g7.jpg" class="gimg" alt="" />
-        </div>
-        <div class="g-item">
-          <img src="./Images/g8.jpg" class="gimg" alt="" />
-        </div>
-        <div class="g-item">
-          <img src="./Images/g9.jpg" class="gimg" alt="" />
-        </div>
+        <div class="gal-item"><img src="./Images/g1.jpg" alt="" /></div>
+        <div class="gal-item"><img src="./Images/g2.jpg" alt="" /></div>
+        <div class="gal-item"><img src="./Images/g3.jpg" alt="" /></div>
+        <div class="gal-item"><img src="./Images/g4.jpg" alt="" /></div>
+        <div class="gal-item"><img src="./Images/g5.jpg" alt="" /></div>
+        <div class="gal-item"><img src="./Images/g6.jpg" alt="" /></div>
+        <div class="gal-item"><img src="./Images/g7.jpg" alt="" /></div>
+        <div class="gal-item"><img src="./Images/g8.jpg" alt="" /></div>
+        <div class="gal-item"><img src="./Images/g9.jpg" alt="" /></div>
       </div>
     </main>
 
