--- a/index.html
+++ b/index.html
@@ -38,46 +38,42 @@
         <p>Why choose Unleash - The Dog Town</p>
         <div class="town">
           <div class="box">
-            <figure>
-              <img src="./Images/1.png" alt="" />
-              <figcaption>
-                Experienced Staff: Our team of pet care professionals
-              has experience in handling dogs of all breeds and sizes.
-              </figcaption>
-            </figure>
+            <img src="./Images/1.png" alt="" />
+            <p>
+              Experienced Staff: Our team of pet care professionals has
+              experience in handling dogs of all breeds and sizes.
+            </p>
           </div>
+
           <div class="box">
-            <figure>
-              <img src="./Images/2.png" alt="" />
-              <figcaption>
-                24/7 Supervision: We offer round-the-clock supervision to ensure
+            <img src="./Images/2.png" alt="" />
+            <p>
+              24/7 Supervision: We offer round-the-clock supervision to ensure
               your pet's safety & well-being at all times.
-              </figcaption>
-            </figure>
+            </p>
           </div>
+
           <div class="box">
-            <figure>
-              <img src="./Images/3.png" alt="" />
-              <figcaption>
-                Spacious Play Areas: Large, secure outdoor and indoor play areas
-                allow your dog to run, play, and socialize.
-              </figcaption>
-            </figure>
+            <img src="./Images/3.png" alt="" />
+
+            <p>
+              Spacious Play Areas: Large and secure, both outdoor and indoor
+              play areas allow your dog to run, play, and socialize.
+            </p>
           </div>
+
           <div class="box">
-            <figure>
-              <img src="./Images/4.png" alt="" />
-              <figcaption>
-                Regular Updates: Stay connected with daily photos, videos and updates on
-                your pet’s activities and well-being.
-              </figcaption>
-            </figure>
+            <img src="./Images/4.png" alt="" />
+            <p>
+              Regular Updates: Stay connected with daily photos, videos and
+              updates on your pet’s activities and well-being.
+            </p>
           </div>
-    
+        </div>
       </div>
     </section>
     <article>
-      <div class="container">
+      <div class="container serv">
         <h1>Our Services</h1>
         <div class="service">
           <h3>Boarding packages</h3>
@@ -115,28 +111,47 @@
         <div class="container__right">
           <div class="card">
             <div class="card__content">
-              <span><i class='bx bxs-quote-alt-left'></i></span>
+              <span><i class="bx bxs-quote-alt-left"></i></span>
               <div class="card__details">
-                <p>Awesome place. This was the first time we were leaving our fur baby. But Sam made sure this won't be our last time. He and his staff did a great work taking care of my pet. We were so relaxed and assured. I do recommend Unleash to anyone who wants a place and person so trustworthy that you can leave ur fur babies with them.</p>
+                <p>
+                  Awesome place. This was the first time we were leaving our fur
+                  baby. But Sam made sure this won't be our last time. He and
+                  his staff did a great work taking care of my pet. We were so
+                  relaxed and assured. I do recommend Unleash to anyone who
+                  wants a place and person so trustworthy that you can leave ur
+                  fur babies with them.
+                </p>
                 <h4>- Shradha L</h4>
               </div>
             </div>
           </div>
-          
+
           <div class="card">
             <div class="card__content">
-              <span><i class='bx bxs-quote-alt-left'></i></span>
+              <span><i class="bx bxs-quote-alt-left"></i></span>
               <div class="card__details">
-                <p>More than the facility which in itself is very very clean and spacious, it’s Mr Sameer Gokhale who impresses you with his dedication and care for your furry baby. He updates you regularly and is very concerned about whether our pet is eating well and is happy. Super impressive, keep it going!!!</p>
+                <p>
+                  More than the facility which in itself is very very clean and
+                  spacious, it’s Mr Sameer Gokhale who impresses you with his
+                  dedication and care for your furry baby. He updates you
+                  regularly and is very concerned about whether our pet is
+                  eating well and is happy. Super impressive, keep it going!!!
+                </p>
                 <h4>- Mamta Singh</h4>
               </div>
             </div>
           </div>
           <div class="card">
             <div class="card__content">
-              <span><i class='bx bxs-quote-alt-left'></i></span>
+              <span><i class="bx bxs-quote-alt-left"></i></span>
               <div class="card__details">
-                <p>Thank you Sameer and team for taking proper care of Coco inspite of his growling and agressive behaviour..Thanks a lot Sameer for your guidance on dog training and behaviour, will definitely work on it. Unleash is the best place in town where your pet is in the most safe and experienced hands.</p>
+                <p>
+                  Thank you Sameer and team for taking proper care of Coco
+                  inspite of his growling and agressive behaviour..Thanks a lot
+                  Sameer for your guidance on dog training and behaviour, will
+                  definitely work on it. Unleash is the best place in town where
+                  your pet is in the most safe and experienced hands.
+                </p>
                 <h4>- Deepali Jamdade</h4>
               </div>
             </div>
@@ -144,15 +159,14 @@
         </div>
       </div>
     </section>
-  
-   
+
     <section class="main">
       <div class="container last">
-        <p>Book your dog's stay today</p>
-        <button class="cta">BOOK</button>
+        <p class="bok">Book your dog's stay today</p>
+        <button class="btn">BOOK</button>
       </div>
     </section>
-    <footer class="light">
+    <footer class="light foot">
       <div class="container">
         <p>Copyright &copy; Unleash - The Dog Town 2024</p>
       </div>
