--- a/contact.html
+++ b/contact.html
@@ -54,8 +54,8 @@
       </div>
     </section>
 
-    <footer class="light">
-      <div class="container">
+    <footer class="light foot">
+      <div class="container line">
         <p>Copyright &copy; Unleash - The Dog Town 2024</p>
       </div>
     </footer>
