--- a/gallery.html
+++ b/gallery.html
@@ -35,7 +35,7 @@
       </div>
     </main>
 
-    <footer class="light">
+    <footer class="light foot">
       <div class="container">
         <p>Copyright &copy; Unleash - The Dog Town 2024</p>
       </div>
