--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
           <div class="box">
             <img src="./Images/1.png" alt="" />
             <p>
-              Experienced Staff: Our team of pet care professionals has
-              experience in handling dogs of all breeds and sizes.
+              Experienced Staff: Our team of professionals has experience in
+              handling dogs of all breeds & sizes.
             </p>
           </div>
 
